--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
 <body>
     <h1>Bienvenue sur mon site</h1>
     <p>Ce site est hébergé sur GitHub Pages.</p>
+      <style>
+        button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+     <button onclick="window.location.href='apropos.html';">Aller à la page À Propos</button>
 </body>
 </html>
