--- a/index.html
+++ b/index.html
@@ -3,25 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon site</title>
-</head>
-<body>
-    <h1>Bienvenue sur mon site</h1>
-    <p>Ce site est hébergé sur GitHub Pages.</p>
-      <style>
-        button {
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
+    <title>Carrefour Jeunesse Afrique - Renouer Nos Racines</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
         }
-        button:hover {
+        header {
             background-color: #0056b3;
+            color: white;
+            padding: 15px;
+            font-size: 24px;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: #0056b3;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: #0056b3;
+            color: white;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
     </style>
-     <button onclick="window.location.href='apropos.html';">Aller à la page À Propos</button>
+</head>
+<body>
+    <header>
+        Carrefour Jeunesse Afrique - Renouer Nos Racines
+    </header>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="apropos.html">À Propos</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <section>
+        <h1>Bienvenue sur Carrefour Jeunesse Afrique</h1>
+        <p>Découvrez notre projet "Renouer Nos Racines" et engagez-vous avec nous pour valoriser notre héritage culturel.</p>
+    </section>
+    <footer>
+        &copy; 2024 Carrefour Jeunesse Afrique
+    </footer>
 </body>
 </html>
