--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f6a008;
+            color: #142b40;
         }
         header {
-            background-color: #0056b3;
+            background-color: #142b40;
             color: white;
             padding: 15px;
             font-size: 24px;
@@ -23,15 +24,16 @@
         }
         nav a {
             text-decoration: none;
-            color: #0056b3;
+            color: #142b40;
             margin: 0 15px;
             font-size: 18px;
         }
         section {
             padding: 20px;
+            background-color: #a5c217;
         }
         footer {
-            background-color: #0056b3;
+            background-color: #6f2511;
             color: white;
             padding: 10px;
             position: absolute;
@@ -46,8 +48,8 @@
     </header>
     <nav>
         <a href="index.html">Accueil</a>
+        <a href="voyage.html"> Voyage</a>
         <a href="apropos.html">À Propos</a>
-        <a href="#contact">Contact</a>
     </nav>
     <section>
         <h1>Bienvenue sur Carrefour Jeunesse Afrique</h1>
