--- a/index.html
+++ b/index.html
@@ -12,31 +12,54 @@
             padding: 0;
             background-color: #f6a008;
             color: #142b40;
+            overflow-x: hidden;
         }
         header {
             background-color: #142b40;
             color: white;
-            padding: 15px;
+            padding: 20px;
             font-size: 24px;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         nav {
             margin: 20px 0;
+            animation: slideIn 1s ease-in-out;
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
         nav a {
             text-decoration: none;
-            color: #142b40;
+            color: white;
             margin: 0 15px;
             font-size: 18px;
+            padding: 10px 15px;
+            background-color: #142b40;
+            border-radius: 5px;
+            transition: background-color 0.3s;
         }
-        section {
-            padding: 20px;
+        nav a:hover {
             background-color: #a5c217;
         }
+        section {
+            padding: 40px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            width: 80%;
+            border-radius: 10px;
+            animation: fadeIn 2s ease-in-out;
+        }
         footer {
-            background-color: #6f2511;
+            background-color: #142b40;
             color: white;
-            padding: 10px;
-            position: absolute;
+            padding: 15px;
+            position: fixed;
             bottom: 0;
             width: 100%;
         }
@@ -48,7 +71,7 @@
     </header>
     <nav>
         <a href="index.html">Accueil</a>
-        <a href="voyage.html"> Voyage</a>
+        <a href="voyage.html">Voyage</a>
         <a href="apropos.html">À Propos</a>
     </nav>
     <section>
