--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             font-size: 24px;
             animation: fadeIn 1.5s ease-in-out;
         }
+        header div {
+             padding: 20px 0;
+           text-align: center;
+        }
+        
+        
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
@@ -68,6 +74,8 @@
 <body>
     <header>
         Carrefour Jeunesse Afrique - Renouer Nos Racines
+         <div class="logo">
+        </div>
     </header>
     <nav>
         <a href="index.html">Accueil</a>
@@ -76,7 +84,8 @@
     </nav>
     <section>
         <h1>Bienvenue sur Carrefour Jeunesse Afrique</h1>
-        <p>Découvrez notre projet "Renouer Nos Racines" et engagez-vous avec nous pour valoriser notre héritage culturel.</p>
+        <p>Découvrez notre projet "Renouer Nos Racines" et engagez-vous avec nous pour valoriser notre héritage culturel. <br>
+        Rejoignez le programme et participez à cette expérience unique. Les places sont limitées, alors ne tardez pas</p>
     </section>
     <footer>
         &copy; 2024 Carrefour Jeunesse Afrique
