--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <header>
         Carrefour Jeunesse Afrique - Renouer Nos Racines
          <div class="logo">
+             <img src="logo.png" alt="Logo de cja">
         </div>
     </header>
     <nav>
@@ -84,7 +85,7 @@
     </nav>
     <section>
         <h1>Bienvenue sur Carrefour Jeunesse Afrique</h1>
-        <p>Découvrez notre projet "Renouer Nos Racines" et engagez-vous avec nous pour valoriser notre héritage culturel. <br>
+        <p> <h2>Découvrez notre projet "Renouer Nos Racines". </h2><br>
         Rejoignez le programme et participez à cette expérience unique. Les places sont limitées, alors ne tardez pas</p>
     </section>
     <footer>
