--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
             font-size: 24px;
             animation: fadeIn 1.5s ease-in-out;
         }
-        header div {
-             padding: 20px 0;
-           text-align: center;
-        }
-        
+    header .logo {
+    font-size: 2.5rem;
+}
+
         
         @keyframes fadeIn {
             from { opacity: 0; }
