--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px 20px;
-            background-color: #f4f4f4;
+            background-color: #142b40;
         }
 
         header .logo {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
         }
 
         header .logo img {
@@ -175,13 +175,17 @@
         <div class="logo">
             <img src="logo.png" alt="Logo de CJA">
         </div>
-        <nav>
+    
+    </header>
+    <nav>
             <a href="index.html">Accueil</a>
             <a href="voyage.html">Voyage</a>
             <a href="apropos.html">À Propos</a>
         </nav>
-    </header>
-
+     <section>
+        <p>La diaspora africaine rassemble des millions de personnes à travers le monde, porteuses d’une double identité souvent à la recherche d’une reconnexion avec leur terre d’origine. 
+            Baignés dans des visions partielles ou négatives relayées par les médias, de nombreux membres de la diaspora recherchent un moyen de redécouvrir leurs racines et de renouer avec leur héritage culturel.</p>
+    </section>
     <section>
         <h1>Découvrez notre projet "Renouer Nos Racines"</h1>
         <p>Rejoignez le programme et participez à cette expérience unique. Les places sont limitées, alors ne tardez pas.</p>
