--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #f6a008;
-            color: #142b40;
+            color: ;
             overflow-x: hidden;
         }
 
@@ -20,8 +20,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 20px;
-            background-color: #142b40;
+            padding: 2px 10px;
+            background-color: #102b40;
         }
 
         header .logo {
@@ -174,8 +174,7 @@
         Carrefour Jeunesse Afrique - Renouer Nos Racines
         <div class="logo">
             <img src="logo.png" alt="Logo de CJA">
-        </div>
-    
+        </div>  
     </header>
     <nav>
             <a href="index.html">Accueil</a>
