--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 2px 10px;
-            background-color: #102b40;
+            padding: 2px 5px;
+            background-color: #00000;
         }
 
         header .logo {
@@ -175,7 +175,7 @@
         <div class="logo">
             <img src="logo.png" alt="Logo de CJA">
         </div>  
-    </header>
+    </header>   <br>  
     <nav>
             <a href="index.html">Accueil</a>
             <a href="voyage.html">Voyage</a>
