--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 2px 5px;
+          /*  padding: 2px 5px;*/
             background-color: #142b40;
         }
 
@@ -30,7 +30,7 @@
         }
 
         header .logo img {
-            max-width: 70px;
+            max-width: 100px;
             height: auto;
         }
 
