--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
         header h1 {
             color: white;
-            font-size: 10px;
+            font-size: 20px;
             margin: 0;
         }
 
         header .logo {
     display: flex;
-    justify-content: center;
+    justify-content: flex;
     align-items: center;
-    width: 60px; /* Ajustez la taille selon vos besoins */
+    width: 80px; /* Ajustez la taille selon vos besoins */
     height: 60px;
     background-color: white;
     border-radius: 50%;
-    border: 2px solid white; /* Contour blanc */
+    border: 1px solid white; /* Contour blanc */
     overflow: hidden; /* Assure que l'image reste dans le cercle */
 }
 
@@ -60,7 +60,7 @@ header .logo img {
             color: #142b40;
             font-size: 18px;
             padding: 10px 15px;
-            
+             background-color: #a5c217;
             border-radius: 5px;
             transition: background 0.3s;
         }
