--- a/index.html
+++ b/index.html
@@ -25,26 +25,16 @@
 
         header h1 {
             color: white;
-            font-size: 20px;
+            font-size: 18px;
             margin: 0;
         }
 
-        header .logo {
-    display: flex;
-    justify-content: flex;
-    align-items: center;
-    width: 80px; /* Ajustez la taille selon vos besoins */
-    height: 60px;
-    background-color: white;
-    border-radius: 50%;
-    border: 1px solid white; /* Contour blanc */
-    overflow: hidden; /* Assure que l'image reste dans le cercle */
-}
-
-header .logo img {
-    width: 100%;
-    height: auto;
-}
+        .logo img {
+            max-width: 50px;
+            height: auto;
+            border: 3px solid white;
+            border-radius: 50%;
+            margin-left: 10px;
         }
 
         nav {
@@ -60,7 +50,7 @@ header .logo img {
             color: #142b40;
             font-size: 18px;
             padding: 10px 15px;
-             background-color: #a5c217;
+            background-color: white;
             border-radius: 5px;
             transition: background 0.3s;
         }
@@ -160,12 +150,12 @@ header .logo img {
             <p>Créer un pont entre la diaspora et l’Afrique pour un avenir prospère et solidaire.</p>
         </div>
     </div>
-    <br> <br>
+       <br> <br>
     <section>
         <h2>Pourquoi ce projet ?</h2>
         <p>De nombreuses personnes issues de la diaspora africaine ressentent un besoin profond de redécouvrir leurs origines, de mieux comprendre leur histoire et d’établir des liens concrets avec leur pays d’origine. Notre initiative vise à combler ce besoin en proposant des voyages immersifs, des rencontres enrichissantes et un apprentissage culturel authentique.</p>
-    </section> <br> <br>
-    
+    </section>
+    <br> <br>
     <footer>
         &copy; 2024 Carrefour Jeunesse Afrique
     </footer>
