--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         .logo img {
             max-width: 50px;
             height: auto;
-            border: 3px solid white;
             border-radius: 50%;
             margin-left: 10px;
+             position: absolute;
+                top: 10px;
+                right: 10px;
         }
 
         nav {
@@ -116,7 +118,7 @@
     <header>
         <h1>Carrefour Jeunesse Afrique - Renouer Nos Racines</h1>
         <div class="logo">
-            <img src="logo.png" alt="Logo de CJA">
+            <img src="contour.png" alt="Logo de CJA">
         </div>
     </header>
     
