--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         }
 
         .logo img {
-       
+            max-width: 50px;
+            height: auto;
+            margin-left: 10px;
              position: absolute;
                 top: 10px;
                 right: 10px;
