--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
         <p>De nombreuses personnes issues de la diaspora africaine ressentent un besoin profond de redécouvrir leurs origines, de mieux comprendre leur histoire et d’établir des liens concrets avec leur pays d’origine. Notre initiative vise à combler ce besoin en proposant des voyages immersifs, des rencontres enrichissantes et un apprentissage culturel authentique.</p>
     </section>
     <br> <br>
+    <h2>Bon à savoir</h2> <br>
+   <h4> Renouer avec Nos Racines" est bien plus qu’un simple voyage. Ce projet offre une expérience transformatrice conçue pour montrer le vrai visage de l’Afrique et encourager des liens
+    profonds entre la diaspora et le continent. En participant, chaque individu s’engage non seulement à se reconnecter avec son héritage culturel, mais aussi à contribuer activement à 
+    un avenir où la diaspora joue un rôle clé dans l’essor du continent Africain. </h4> <br>
+       <button  <a href="voyage.html"> > Participer  </button> </a>
     <footer>
         &copy; 2024 Carrefour Jeunesse Afrique
     </footer>
