--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         }
 
         .section-container img {
-            max-width: 500px;
-            border-radius: 50px;
+            max-width: 300px;
+            border-radius: 10px;
         }
 
         section {
@@ -137,32 +137,35 @@
     <div class="cards-container">
         <div class="card" id="presentation">
             <h2>Présentation</h2>
-            <p>Carrefour Jeunesse Afrique (CJA) est un centre socio-éducatif visant à accompagner les jeunes en difficulté.</p>
+            <p>La diaspora africaine rassemble des millions de personnes à travers le monde, porteuses d’une double identité souvent à la recherche d’une reconnexion avec leur terre d’origine.
+                Baignés dans des visions partielles ou négatives relayées par les médias, de nombreux membres de la diaspora recherchent un moyen de redécouvrir leurs racines et de renouer avec leur héritage culturel.
+                .</p>
         </div>
 
         <div class="card" id="objectifs">
             <h2>Objectifs</h2>
-            <p>Reconnecter la diaspora africaine avec son patrimoine culturel tout en soutenant des initiatives locales.</p>
+            <p>". L’objectif est de permettre aux participants de se reconnecter à leur patrimoine culturel tout en contribuant activement à l’essor du continent.
+À travers un séjour de deux semaines au Bénin, les participants auront l’opportunité de découvrir un autre visage de l’Afrique : celui d’un continent riche, 
+                dynamique et rempli d’initiatives locales porteuses d’avenir. Ce projet n’est pas seulement un retour aux sources. C’est une opportunité de redécouvrir 
+                une identité souvent fragmentée, de tisser des liens profonds avec le continent et d’agir en tant qu’acteurs du changement. </p>
         </div>
 
         <div class="card" id="vision">
             <h2>Vision</h2>
-            <p>Créer un pont entre la diaspora et l’Afrique pour un avenir prospère et solidaire.</p>
+            <p>Créer un pont solide entre la diaspora et l’Afrique,
+                en favorisant une reconnexion culturelle, une compréhension réaliste des réalités locales et une valorisation des initiatives qui façonnent l’avenir du continent.</p>
         </div>
     </div>
        <br> <br>
-    <section>
-        <h2>Pourquoi ce projet ?</h2>
-        <p>De nombreuses personnes issues de la diaspora africaine ressentent un besoin profond de redécouvrir leurs origines, de mieux comprendre leur histoire et d’établir des liens concrets avec leur pays d’origine. Notre initiative vise à combler ce besoin en proposant des voyages immersifs, des rencontres enrichissantes et un apprentissage culturel authentique.</p>
-    </section>
     <br> <br>
-    <section>
+    <p>
     <h2>Bon à savoir</h2> <br>
-   <h4> Renouer avec Nos Racines" est bien plus qu’un simple voyage. Ce projet offre une expérience transformatrice conçue pour montrer le vrai visage de l’Afrique et encourager des liens
-    profonds entre la diaspora et le continent. En participant, chaque individu s’engage non seulement à se reconnecter avec son héritage culturel, mais aussi à contribuer activement à 
-    un avenir où la diaspora joue un rôle clé dans l’essor du continent Africain. </h4> <br>
-       <button  <a href="voyage.html"> > Participer  </button> </a>
-    </section>
+   <h4> Renouer avec Nos Racines" est bien plus qu’un simple voyage. Ce projet n’est pas seulement un retour aux sources. C’est une opportunité de redécouvrir une identité souvent
+       fragmentée, de tisser des liens profonds avec le continent et d’agir en tant qu’acteurs du changement. Via des rencontres, des échanges et des actions concrètes,
+       chaque participant fait un pas vers une reconnexion profonde avec ses racines et contribue à écrire un futur où diaspora et continent se renforcent mutuellement,
+       dans un esprit de solidarité. Le premier séjour de ce programme se déroulera au Bénin, berceau de traditions riches et de récits fondateurs de l’histoire africaine. </h4> <br>
+    </p> <br>
+     <button  <a href="voyage.html"> > Participer  </button> </a> <br>
     <footer>
         &copy; 2024 Carrefour Jeunesse Afrique
     </footer>
