--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <div class="card" id="objectifs">
             <h2>Objectifs</h2>
-            <p>". L’objectif est de permettre aux participants de se reconnecter à leur patrimoine culturel tout en contribuant activement à l’essor du continent.
+            <p>L’objectif est de permettre aux participants de se reconnecter à leur patrimoine culturel tout en contribuant activement à l’essor du continent.
 À travers un séjour de deux semaines au Bénin, les participants auront l’opportunité de découvrir un autre visage de l’Afrique : celui d’un continent riche, 
                 dynamique et rempli d’initiatives locales porteuses d’avenir. Ce projet n’est pas seulement un retour aux sources. C’est une opportunité de redécouvrir 
                 une identité souvent fragmentée, de tisser des liens profonds avec le continent et d’agir en tant qu’acteurs du changement. </p>
@@ -158,13 +158,14 @@
     </div>
        <br> <br>
     <br> <br>
-    <p>
-    <h2>Bon à savoir</h2> <br>
+    <section>
+    <h2>Bon à savoir</h2>  
+    </section>  <br>
    <h4> Renouer avec Nos Racines" est bien plus qu’un simple voyage. Ce projet n’est pas seulement un retour aux sources. C’est une opportunité de redécouvrir une identité souvent
        fragmentée, de tisser des liens profonds avec le continent et d’agir en tant qu’acteurs du changement. Via des rencontres, des échanges et des actions concrètes,
        chaque participant fait un pas vers une reconnexion profonde avec ses racines et contribue à écrire un futur où diaspora et continent se renforcent mutuellement,
        dans un esprit de solidarité. Le premier séjour de ce programme se déroulera au Bénin, berceau de traditions riches et de récits fondateurs de l’histoire africaine. </h4> <br>
-    </p> <br>
+  <br>
      <button  <a href="voyage.html"> > Participer  </button> </a> <br>
     <footer>
         &copy; 2024 Carrefour Jeunesse Afrique
