--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             background-color: #f6a008;;
             overflow-x: hidden;
         }
+         h4 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: #142b40;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    opacity: 0;
+    transform: translateY(10px);
+    animation: fadeInUp 0.8s ease-out forwards;
+}
 
         /* HEADER */
         header {
@@ -116,7 +126,6 @@
 <body>
     <header>
         <h1>Carrefour Jeunesse Afrique - Renouer Nos Racines</h1>
-        
     </header>
     <nav>
         <a href="index.html">Accueil</a>
@@ -161,10 +170,10 @@
     <section>
     <h2>Bon à savoir</h2>  
     </section>  <br>
-   <h4> Renouer avec Nos Racines" est bien plus qu’un simple voyage. Ce projet n’est pas seulement un retour aux sources. C’est une opportunité de redécouvrir une identité souvent
+   <h4> Renouer avec Nos Racines" </h4> est bien plus qu’un simple voyage. Ce projet n’est pas seulement un retour aux sources. C’est une opportunité de redécouvrir une identité souvent
        fragmentée, de tisser des liens profonds avec le continent et d’agir en tant qu’acteurs du changement. Via des rencontres, des échanges et des actions concrètes,
        chaque participant fait un pas vers une reconnexion profonde avec ses racines et contribue à écrire un futur où diaspora et continent se renforcent mutuellement,
-       dans un esprit de solidarité. Le premier séjour de ce programme se déroulera au Bénin, berceau de traditions riches et de récits fondateurs de l’histoire africaine. </h4> <br>
+       dans un esprit de solidarité. Le premier séjour de ce programme se déroulera au Bénin, berceau de traditions riches et de récits fondateurs de l’histoire africaine.  <br>
   <br>
      <button  <a href="voyage.html"> > Participer  </button> </a> <br>
     <footer>
