--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #f6a008;;
             overflow-x: hidden;
         }
-         h4 {
+        body h4 {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     color: #142b40;
